--- a/1_/Lab1_5/Lab1_5/Lab1_5.vcxproj
+++ b/1_/Lab1_5/Lab1_5/Lab1_5.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{b8f6e09a-26a1-40b3-b6d6-d447c50d6edd}</ProjectGuid>
+    <ProjectGuid>{90bdf5bc-e559-487a-96c6-dec5212ec1e9}</ProjectGuid>
     <RootNamespace>Lab15</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Lab1_5.c" />
+    <ClCompile Include="Task_5.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
