--- a/1_/Lab1_5/Lab1_5/Lab1_5.vcxproj.filters
+++ b/1_/Lab1_5/Lab1_5/Lab1_5.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Lab1_5.c">
+    <ClCompile Include="Task_5.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
