--- a/1_/Lab5/Lab5/Lab5.vcxproj.filters
+++ b/1_/Lab5/Lab5/Lab5.vcxproj.filters
@@ -15,7 +15,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Lab5.c">
+    <ClCompile Include="Lab5_DZ4.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Lab5_0.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Lab5_1.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Lab5_2.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Lab5_3.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
