--- a/1_/Lab6/Lab6/Lab6.vcxproj
+++ b/1_/Lab6/Lab6/Lab6.vcxproj
@@ -127,9 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Lab5_1.c" />
-    <ClCompile Include="Lab5_2.c" />
-    <ClCompile Include="Lab6.c" />
+    <ClCompile Include="Lab6_1.c" />
+    <ClCompile Include="Lab6_2.c" />
+    <ClCompile Include="Lab6_4I.c" />
+    <ClCompile Include="Lab6_3.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
