--- a/1_/Lab6/Lab6/Lab6.vcxproj.filters
+++ b/1_/Lab6/Lab6/Lab6.vcxproj.filters
@@ -15,13 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Lab6.c">
+    <ClCompile Include="Lab6_4I.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="Lab5_1.c">
+    <ClCompile Include="Lab6_1.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="Lab5_2.c">
+    <ClCompile Include="Lab6_2.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Lab6_3.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
